samples/_failures_safe/1761348226_7d6908_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20c2bd26.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_20c2bd26.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("Shortest distance from %d to %d: ", start, target);
      |     ^~~~~~
